export type GroupName = 'EXTERNAL' | 'CURATORIAL' | 'COLLECTIONS_MANAGEMENT' | 'DIRECTION';
